--- a/pagepaiement.css
+++ b/pagepaiement.css
@@ -4,18 +4,16 @@ h1 {
     text-align: center;
     margin-bottom: 50px;
     margin-top: 50px;
+    font-weight: bold;
 }
 
-@media only screen and (max-width: 700px) {
-    h1 {
-        font-size: 19px;
-        text-align: center;
-    }
-}
 
 h2 {
     font-size: 15px;
     text-align: center;
+    color: #347850;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .block {
@@ -24,38 +22,25 @@ h2 {
     justify-content: space-around;
 }
 
-@media screen and (max-width:700px) {
-    section.blocs {
-        display: grid;
-        grid-template-rows: auto;
-        grid-gap: 10px;
-        justify-items: center;
-    }
-}
-
-.contact {
-    border: solid;
-    border-width: 2px;
-    border-color: #848C14;
-    border-radius: 20px;
-    padding: 10px;
-    width: 200px;
-    grid-column: auto;
-    margin-right: 5px;
-
-}
-
 .error {
     color: #b60000;
     font-size: 11px;
     text-align: start;
 }
 
+.contact {
+    border: none;
+    background-color: #face49c3;
+    border-radius: 10px;
+    padding: 10px;
+    grid-column: auto;
+    margin-right: 5px;
+}
+
 .paiement {
-    border: solid;
-    border-width: 2px;
-    border-color: #848C14;
-    border-radius: 20px;
+    border: none;
+    background-color: #face49c3;
+    border-radius: 10px;
     padding: 10px;
     height: auto;
     grid-column: auto;
@@ -64,7 +49,7 @@ h2 {
 }
 
 #formCB {
-    display : block;
+    display: block;
 }
 
 #appoint {
@@ -76,26 +61,21 @@ p {
 }
 
 .recap {
-    border: solid;
-    border-width: 2px;
-    border-color: #848C14;
-    border-radius: 20px;
+    border: none;
+    background-color: #face49c3;
+    border-radius: 10px;
     padding: 10px;
-    width: 200px;
-    height: auto;
-    grid-column: auto;
+    height: 300px;
 }
 
 #button {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 #submit {
-    /* align-items: center; */
     margin-top: 20px;
-    /* grid-column: auto; */
     color: white;
     background-color: #A0490E;
     border: none;
@@ -109,4 +89,37 @@ p {
 input[type="text"] {
     border-radius: 10px;
     margin-bottom: 5px;
+    border: none;
+}
+
+/* Responsive */
+@media screen and (max-width:700px) {
+    h1 {
+        font-size: 19px;
+        text-align: center;
+    }
+
+    .block {
+        display: grid;
+        grid-template-rows: auto;
+        grid-gap: 10px;
+        justify-items: center;
+    }
+
+    .contact {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .paiement {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .recap {
+        width: 100%;
+        text-align: center;
+    }
 }
