--- a/pagepaiement.css
+++ b/pagepaiement.css
@@ -1,4 +1,4 @@
-h1 {
+h3 {
     font-size: 28px;
     color: #848C14;
     text-align: center;
@@ -93,8 +93,8 @@ input[type="text"] {
 }
 
 /* Responsive */
-@media screen and (max-width:700px) {
-    h1 {
+@media screen and (max-width:640px) {
+    h3 {
         font-size: 19px;
         text-align: center;
     }
@@ -122,4 +122,29 @@ input[type="text"] {
         width: 100%;
         text-align: center;
     }
+    /* HEADER */
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #A0490E; */
+    background-color: #b22924;
+    width: 100vw;
+    height: 22vh;
+    min-width:100vw;
+}
+
+#logorestau, #namerestau {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    display:none;
+    color:#d7cda0ab;
+    font-size: 2em;
+    font-family: 'Rowdies', cursive;
+    text-transform: uppercase;
+}
 }
