--- a/css/cssAccueil.css
+++ b/css/cssAccueil.css
@@ -1,7 +1,7 @@
 /* BODY */
 
-body{
-    margin:auto;
+body {
+    margin: auto;
 }
 
 /* HEADER */
@@ -14,17 +14,18 @@ header {
     background-color: #b22924;
     width: 100vw;
     height: 22vh;
-    min-width:100vw;
+    min-width: 100vw;
 }
 
-#logorestau, #namerestau {
+#logorestau,
+#namerestau {
     display: flex;
     justify-content: center;
 }
 
 h1 {
-    display:none;
-    color:#d7cda0ab;
+    display: none;
+    color: #d7cda0ab;
     font-size: 2em;
     font-family: 'Rowdies', cursive;
     text-transform: uppercase;
@@ -32,111 +33,114 @@ h1 {
 
 /* BURGERS */
 
-p{
-    margin:3%;
+p {
+    margin: 3%;
 }
 
-.burgers, .sides, .desserts{
- display: flex;
- flex-direction: column;
- align-items: center;
- padding:0.5em;
- /* box-shadow: 0 0 5px #cccccc; */
- margin: 0.5em;
- border-radius: 10px;
- background-color: #d7cda043 ;
- /* background-color: rgb(112,127,150, 0.1); */
+.burgers,
+.sides,
+.desserts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5em;
+    /* box-shadow: 0 0 5px #cccccc; */
+    margin: 0.5em;
+    border-radius: 10px;
+    background-color: #d7cda043;
+    /* background-color: rgb(112,127,150, 0.1); */
 }
 
 
 .drinks {
     box-shadow: 0 0 5px #cccccc;
     margin: 0.5em;
-    padding:0.5em;
+    padding: 0.5em;
 }
 
 .picandside {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(5,1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
 }
 
-.foodpic{
-    border-radius: 50%;;
+.foodpic {
+    border-radius: 50%;
+    ;
     grid-column: 1/3;
     grid-row: 1/5;
 }
 
-.foodpic:hover{
-    transform:scale(1.3);
+.foodpic:hover {
+    transform: scale(1.3);
     z-index: 2;
     grid-column: 2/4;
 }
 
-.encart{
-   display: flex;
-   /* background-color:#fecf03 ; */
-   background-color: #facf49;
-   /* opacity: 0.85;  */
-   color:#347850;
-   z-index: 1;
-   font-size: 0.8em;
-   grid-column: 2/5;
-   grid-row: 4/6;
-   font-size: 1em;
-   border-radius: 10px;
-   width: 50%;
+.encart {
+    display: flex;
+    /* background-color:#fecf03 ; */
+    background-color: #facf49;
+    /* opacity: 0.85;  */
+    color: #347850;
+    z-index: 1;
+    font-size: 0.8em;
+    grid-column: 2/5;
+    grid-row: 4/6;
+    font-size: 1em;
+    border-radius: 10px;
+    width: 50%;
 }
 
-h4{
-font-size: 1em;
-color:#b22924;
-text-transform: uppercase;
-font-family: 'Rowdies', cursive;
+h4 {
+    font-size: 1em;
+    color: #b22924;
+    text-transform: uppercase;
+    font-family: 'Rowdies', cursive;
 }
 
 .buttons {
     display: flex;
     justify-content: space-around;
-    margin-top : 1vh;
+    margin-top: 1vh;
     /* background-color: #347850; */
     opacity: 0.7;
-    padding:0.5em;
+    padding: 0.5em;
     width: 96%;
 }
 
 input {
     border-radius: 10px;
-    width:5vw;
+    width: 5vw;
 }
 
-button{
+button {
     border-radius: 50%;
     background-color: #b22924;
-    color:white;
-    border-style:none;
+    color: white;
+    border-style: none;
     width: 30px;
-    height:30px;
+    height: 30px;
 }
 
-button:hover{
+button:hover {
     cursor: pointer;
     background-color: white;
-    color:#b22924;
+    color: #b22924;
 
 }
 
-h3{
+h3 {
     font-family: 'Rowdies', cursive;
     font-size: 1.4em;
     font-weight: bold;
     margin-left: 1em;
-    color:#347850;
+    color: #347850;
     text-transform: uppercase;
 }
 
 .drinks {
-    margin : 1em;
+    margin: 1em;
 }
 
 .inline {
@@ -148,18 +152,24 @@ h3{
 
 .recap {
     margin: 2px;
+    margin-bottom: 20px;
     display: flex;
     border-radius: 10px;
     flex-direction: column;
     align-items: center;
     border: solid 3px grey;
     overflow: scroll;
-    min-height:20vh;
+    min-height: 20vh;
+}
+
+p {
+    text-align: center;
 }
 
 #validate {
     border-radius: 10px;
-    width: 90%;
+    width: 100%;
+    align-items: center;
 }
 
 /* FOOTER */
@@ -169,16 +179,19 @@ footer {
     flex-direction: column;
     /* background-color: #A0490E; */
     background-color: #b22924;
-    bottom:0;
-    color:#fff;
-    padding:2vw;
-    align-items: center;
+    bottom: 0;
+    color: #fff;
+    padding: 2vw;
+
 }
 
-.contact, .address, .location{
+.contact,
+.address,
+.location {
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
+    align-self: center;
 }
 
 h2 {
@@ -186,23 +199,17 @@ h2 {
 }
 
 iframe {
-    border:solid 5px #facf49;
+    border: solid 5px #facf49;
 }
-
 
 /* RESPONSIVE TABLET */
 
-@media screen and (min-width:640px){
-    
-    header{
-        justify-content: space-around;
-    }
-
+@media screen and (min-width:640px) {
     #logo {
-        width:150px;
+        width: 150px;
     }
 
-    h1{
+    h1 {
         display: block;
     }
 
@@ -210,7 +217,9 @@ iframe {
         display: grid;
     }
 
-    .burgers-section, .sides-section, .desserts-section{
+    .burgers-section,
+    .sides-section,
+    .desserts-section {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr, 4fr, 4fr;
@@ -222,7 +231,7 @@ iframe {
     }
 
     .drinks-section {
-        display:grid;
+        display: grid;
     }
 
     .recap {
@@ -235,22 +244,19 @@ iframe {
         flex-direction: row;
         align-items: flex-start;
         justify-content: space-around;
-        }
+    }
 }
 
 /* RESPONSIVE DESKTOP */
-@media screen and (min-width:1024px){
+@media screen and (min-width:1024px) {
 
-    header{
-        height:35vh;
-    }
-     #logo {
+    #logo {
         width: 230px;
     }
-    
-        .address {
-            display: flex;;
-        }
-    
-  
+
+    .address {
+        display: flex;
+        ;
+    }
+
 }
